<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:targetApi="o">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/baseline_home_24"
            android:enabled="true"
            android:title="@string/title_home"/>

        <item
            android:id="@+id/navigation_car_rental"
            android:icon="@drawable/baseline_car_rental_24"
            android:enabled="true"
            android:title="@string/title_car_rental" />

        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:enabled="true"
            android:title="@string/title_profile" />

        <item
            android:id="@+id/navigation_location_pick_up"
            android:icon="@drawable/baseline_location_on_24"
            android:enabled="true"
            android:title="@string/title_location" />
    </group>
</menu>