<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_popular"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/name"
            android:layout_marginHorizontal="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="serif-monospace"
            android:layout_marginTop="10dp"
            android:gravity="top"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/text_popular"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/year"
            android:fontFamily="serif-monospace"
            android:gravity="center_vertical"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/normal_bg"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/popularcar" />

        <TextView
            android:id="@+id/text_popular2"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/price"
            android:textSize="25sp"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black_steel"
            android:textStyle="bold"
            android:fontFamily="serif-monospace"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/text_popular3"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/text_popular2"
            android:layout_marginBottom="10dp"
            android:text="@string/per_day"
            android:layout_marginStart="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black_steel"
            android:fontFamily="serif-monospace"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/book"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:elevation="0dp"
            android:fontFamily="serif-monospace"
            android:background="@drawable/custom_button"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>