<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.carrentalapplication.uiFragment.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_car_rental"
        android:name="com.example.carrentalapplication.uiFragment.CarRental"
        android:label="@string/title_car_rental"
        tools:layout="@layout/fragment_car_rental" />

    <fragment
        android:id="@+id/navigation_location_pick_up"
        android:name="com.example.carrentalapplication.uiFragment.LocationPickUp"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location_pick_up"/>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.carrentalapplication.uiFragment.ChatBot"
        android:label="Chat"
        tools:layout="@layout/fragment_chat_bot" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.carrentalapplication.uiFragment.Setting"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_setting"/>
</navigation>