<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiActivity.Register"
    android:orientation="vertical"
    android:background="@color/white">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="30dp">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="top|center"
            android:src="@drawable/register_bg"
            android:id="@+id/image_register"
            android:contentDescription="@string/top_register_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:layout_gravity="center"
            android:padding="24dp"
            android:orientation="vertical"
            android:layout_marginTop="60dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/brick_red"
                android:fontFamily="serif-monospace"
                android:textSize="30sp"
                android:gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputUserNameRegister"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/username"
                android:maxWidth="480dp"
                android:textColorHint="@color/black_steel"
                app:startIconDrawable="@drawable/baseline_account_circle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:inputType="text"
                    android:textColor="@color/black_steel" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmailRegister"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:maxWidth="480dp"
                android:textColorHint="@color/black_steel"
                app:startIconDrawable="@drawable/baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:inputType="text"
                    android:textColor="@color/black_steel" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPhoneRegister"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/phone"
                android:maxWidth="480dp"
                android:textColorHint="@color/black_steel"
                app:startIconDrawable="@drawable/baseline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:inputType="text"
                    android:textColor="@color/black_steel" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputAddressRegister"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/address"
                android:maxWidth="480dp"
                android:textColorHint="@color/black_steel"
                app:startIconDrawable="@drawable/baseline_location_on_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:inputType="text"
                    android:textColor="@color/black_steel" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPasswordRegister"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:maxWidth="480dp"
                android:textColorHint="@color/black_steel"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_SignUp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/medium_gray"
                android:elevation="0dp"
                android:fontFamily="serif-monospace"
                android:text="@string/sign_up"
                android:textColor="@color/brick_red" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black_steel" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/toSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/brick_red" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
        
</LinearLayout>