<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".uiActivity.Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_gravity="top|center"
            android:contentDescription="@string/top_login_image"
            android:src="@drawable/login_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_gravity="center"
            android:layout_marginTop="95dp"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/brick_red"
                android:textSize="30sp"
                app:fontFamily="serif-monospace" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:maxWidth="480dp"
                android:textColorHint="@color/black_steel"
                app:startIconDrawable="@drawable/baseline_email_24"
                app:startIconTint="@color/brick_red">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:inputType="text"
                    android:textColor="@color/black_steel" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:maxWidth="480dp"
                android:textColorHint="@color/black_steel"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/brick_red"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/brick_red">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:background="#00000000"
                android:elevation="0dp"
                android:fontFamily="serif-monospace"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/black_steel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_SignIn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:elevation="0dp"
                android:fontFamily="serif-monospace"
                android:text="@string/sign_in"
                android:textColor="@color/brick_red" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black_steel" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/toSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/brick_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_google"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/custom_shape"
                    android:drawableStart="@drawable/search"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/google"
                    android:textColor="@color/black_steel" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBarLogin"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:progressTint="@color/brick_red"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>