<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".uiActivity.ForgotPassword">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="top|center"
            android:contentDescription="@string/top_fp_image"
            android:src="@drawable/fp_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:layout_marginTop="65dp"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textAlignment="center"
                android:textColor="@color/brick_red"
                android:textSize="30sp"
                app:fontFamily="serif-monospace" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:hint="@string/email"
                android:maxWidth="480dp"
                android:textColorHint="@color/black_steel"
                app:startIconDrawable="@drawable/baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:inputType="text"
                    android:textColor="@color/black_steel" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_SignIn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@color/medium_gray"
                android:elevation="0dp"
                android:fontFamily="serif-monospace"
                android:text="@string/reset_password"
                android:textColor="@color/brick_red" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:text="@string/change_your_mind"
                    android:textColor="@color/black_steel" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/toSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/brick_red" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>